--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,14 @@
-<h2>Hello World !</h2>
+<div class="container" style="margin-top: 150px">
+  <form class="container d-flex flex-column align-items-center" action="/login" method="POST">
+    <h2 class="fw-bolder mb-4">Account Login</h1>
+      <div class="mb-3" style="min-width: 35vw">
+        <label for="email" class="form-label visually-hidden">Email address</label>
+        <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Email">
+      </div>
+      <div class="mb-4" style="min-width: 35vw">
+        <label for="password" class="form-label visually-hidden">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Password">
+      </div>
+      <button type="submit" class="btn fw-bolder" style="border: 2px solid black">Sign In</button>
+  </form>
+</div>
